--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Folders
 _obj
 _test
+gitrepos
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -20,5 +21,3 @@ _cgo_export.*
 _testmain.go
 
 *.exe
-*.test
-*.prof
